<resources>
    <string name="app_name">LiveCricketNewsScoreFixture</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="header_txt">this is header text. this news will publish recently and i want to publish it recent time for BPL</string>
    <string name="txt_time">10.50AM-16/09/2018</string>


    <string name="postText">Post is here Post is herePost is herePost is herePost is herePost is herePost is herePost is herePost is herePost is herePost is herePost is here</string>
    <string name="exit">Exit</string>
    <string name="enter_post_txt">Please Enter Your Post</string>
    <string name="all_post">All Post</string>
    <string name="name">Name :</string>
    <string name="name_here">Name</string>
    <string name="post">Post :</string>
    <string name="update_dialog">Update Dialog</string>
    <string name="name_hint">Name</string>
    <string name="post_hint">Post</string>
    <string name="update_btn_txt">Update</string>
    <string name="play_no">Play No :</string>
    <string name="group_dggdgdgno">Group dggdgdgNo :</string>
    <string name="team_name">Team Name:</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="stadium_name">Stadium name:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
