<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/flagNum_1_imageViewId"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/flagNum_2_imageView_Id"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/playNoTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/play_no"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/teamNameTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playNoTextViewId"
            android:layout_centerHorizontal="true"
            android:text="@string/team_name"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teamNameTextView_Id"
            android:layout_centerHorizontal="true"
            android:text="@string/date"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/timeTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTextView_Id"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stadiumNameTextView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeTextView_Id"
            android:layout_centerHorizontal="true"
            android:text="@string/stadium_name"
            android:textSize="14dp" />
    </RelativeLayout>


</android.support.v7.widget.CardView>